# ChangeLog for media-sound/kguitar
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Jun 2012; Hakan Demiralp (keenblade) <keenblade@tuxfamily.org>
  kguitar-0.6_pre1.ebuild, +files/kguitar-0.6_pre1-gcc-songview.patch:
  kguitar-0.6_pre1: fix to make modern compilers happy wrt bug #131 by
  pavalliavonau

  25 May 2011: Dominique Michel <dominique|tuxfamily.org>
  introducing kguitar-9999.ebuild

  09 Apr 2011; Hakan Demiralp <keenblade@tuxfamily.org>
  kguitar-0.6_pre1.ebuild, metadata.xml:
  kguitar-0.6_pre1.ebuild: now using EAPI=3

*kguitar-0.6_pre1 (10 Feb 2011)

  10 Feb 2011; Hakan Demiralp <keenblade@tuxfamily.org> -kguitar-0.5.ebuild,
  +kguitar-0.6_pre1.ebuild:
  kguitar-0.6_pre1: added kde4 port of kguitar, removing old kde3 version, wrt
  msg03834 by Alexandros Diamantidis and Arve Barsnes

  17 Dec 2007; Thomas Kuther <gimpel@sonnenkinder.org> ChangeLog:
  added a changelog
