@@ -1,7 +1,7 @@
-AUX kguitar-0.6_pre1-gcc-songview.patch 224 RMD160 ca10f70c6f664355af00db3907f0dd5350324a6a SHA1 781964b32881e1f9166949a38f18f99de7f6824f SHA256 2bd0d135629bca74fcacf33d720194c290f53a7369624019cf9b80d32257ea62
-AUX tetex_sandbox.patch 496 RMD160 bea3e3200ef689c86625517dd4b01903f78de072 SHA1 b1bc2aff55115fa6363bdf0c20ced37c2d191184 SHA256 a52a85f375a2f7cb4f6235bee54fd8036102e2754c0ef1b23693cf6abba27bdf
-DIST kguitar-0.6_pre1.tar.gz 343873 RMD160 c002a278fe950c90474874458907258ca3dd7ed9 SHA1 bd432dc39c821ff0da2fedb3518abce6734953ec SHA256 d4ca47d1bcfa48508631e0eaa3e1c5559b66753e8304b0c80dc2fdb8533e619d
-EBUILD kguitar-0.6_pre1.ebuild 963 RMD160 73fa707925bacae939deb7662f435e5856e76a9b SHA1 6e72b0e682f95d5bb730c2c2e6dfffd8443f530c SHA256 a5decb0b3628f11ab868391768cd804927b4821280d48f88fd9d3b2c9e9e8f42
-EBUILD kguitar-9999.ebuild 779 RMD160 3cd5dfab641be7a8cbc96050db8669312e05d003 SHA1 958c7649dc9ee92aaf5a492bd8a3817cf2b8be2e SHA256 d2033f87ad5168394ae6107f324b4f798c08b1ac48714a7e85472058639281ad
-MISC ChangeLog 941 RMD160 6fe5824bc461c32522cc4a12476ad28213e1b057 SHA1 d1ebb368a3d1e00603e85289bf27272117efac24 SHA256 dda6ef54a91ee6f4db5b5e8900ae586e8fb1e8f8c08543fdcc84717b09b8ba85
-MISC metadata.xml 340 RMD160 84507f5e4dd84b6ec251d56cac3ed60e6a41ed4b SHA1 aa28002bebb7082b1dcfe5885ce288c1aa98f187 SHA256 30d8dbdd781c12d1a34334ad4c20abf22f3431f8fc1a11967084a9d664638475
+AUX kguitar-0.6_pre1-gcc-songview.patch 224 SHA256 2bd0d135629bca74fcacf33d720194c290f53a7369624019cf9b80d32257ea62 SHA512 9ae54f28e1b284c31f509b5187c7db96a3671f51771dc96824116ede90f1e8517ee756a3f6a2754a4dc07fbf8c18ba303e2e2c99c3a6eaba8c09435e6a0ee8f7 WHIRLPOOL c88751beb7a66a8a304799ea6bfac6ed82bd23df9114150da98d7ed6659cfdd2f39eea6a03a7fe9c93abc9939e3040b91a3c31a554a3a8f119d5598bdca673b8
+AUX tetex_sandbox.patch 496 SHA256 a52a85f375a2f7cb4f6235bee54fd8036102e2754c0ef1b23693cf6abba27bdf SHA512 0295666f3bf15be08a7ea45f3743bc9f033d712157c9e8c351656b7a8b97d69c9eb62c6be3a0e0ad6bf77dd6b090ede9e3c4e3b639b438583115f099342aa07c WHIRLPOOL 508a5122f06888c856e2099af789369441d5533d84f55b32abd41ca49740100398e63f69e092713e73d89a33b4fa5d020f499ddf71e1f0dec0a53ecf7898b37a
+DIST kguitar-0.6_pre1.tar.gz 343873 SHA256 d4ca47d1bcfa48508631e0eaa3e1c5559b66753e8304b0c80dc2fdb8533e619d SHA512 40f473c67f10284dc137db6c720bac80122ca81098c9f46ca77f0aae4aa50d9219ebca23c23a20e26552bccbede5d412bdefaf7bfd004650af3e06d44e61541d WHIRLPOOL f1b647b939cc9184e08c509c314444f1cd30238ef3284f6d6de8cc0a4dc660f469a6bea4d318f577957fab2a064f1c40c77efd28a0ad8dcf85d943c45ef9d7e4
+EBUILD kguitar-0.6_pre1.ebuild 963 SHA256 3545e77ff2b68e082d0cc10f923e4dd626a596e26ee92ec689124c37abb8e5a8 SHA512 7c5bba6172b2767405180308937611d7dfe1d01e79d0b498524d210537fba2ab1b35ab3000d02e9d5f9a956de61839ac2e720482312b62f2931976e766e296e1 WHIRLPOOL 66ab89a46aed170c64c58375537fa21bdcf41763f74ac6d04e9e4b14f4bd0231e0934242fd1f7e526f65b92c285bfacd8639d109833eb26f5e4ac279531e9ae1
+EBUILD kguitar-9999.ebuild 779 SHA256 9b11dc4c948a710fa7e4f718eaa6c70e9a34f761965174c94c710a6ccab842ca SHA512 939713d5a7e77b9459c25e77d54972bd9b95e1e0bbde151e7886d539f8e669fb5ff484e43ce214b0299259330f42cd04d4b54019e74aa414baa179d365126982 WHIRLPOOL f8cfe660f91a78b91a12caeb309637c97b4f2ee6d4eae29a8d6e34a9a29bafc7cdb577cfebab227b029b75288f41957e61b71c1ab9d767a3710ef2f36817707c
+MISC ChangeLog 1097 SHA256 655dd69852c2c0e2338ab9b74d8d3c256ea74c40fb3feb4eecc7c2b9273f5226 SHA512 d95a5b4b576ece27c94dd24ba18d158f65b099386201f1bb28fc540fe395f6068948db004408fd5a6248620f5657fd4f82e576d14d485d561d026918eb3e47f8 WHIRLPOOL 86ae1a67a18122877f1dca367ce6e0c7b68c013b7404fa47f363a454c15f64ef8076c536f0c339bb031e6cc8ad4d890bc546e499257100a7df8cea069defad5b
+MISC metadata.xml 340 SHA256 30d8dbdd781c12d1a34334ad4c20abf22f3431f8fc1a11967084a9d664638475 SHA512 9b3bd4dcd101736963d6c58699533b82c6305d0180d51055139c116352c3c06f2333fbc556ceb110a01e9e034676a23d76c7a442a99445125e01ebcababcb6c7 WHIRLPOOL 7c6ab969c83c97d113d8cde87c14f3a75327de9aa49ceb56c98f3c174f583b2186da9035ac5e4a2f99760efd38999ee65d27f9d4dece291d678e6ce3fb92bf09
