@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/kguitar
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  29 Jul 2013; Hakan Demiralp (keenblade) <keenblade@tuxfamily.org>
+  kguitar-0.6_pre1.ebuild, kguitar-9999.ebuild:
+  kguitar: ebuilds adjusted for EAPI 5
 
   07 Jun 2012; Hakan Demiralp (keenblade) <keenblade@tuxfamily.org>
   kguitar-0.6_pre1.ebuild, +files/kguitar-0.6_pre1-gcc-songview.patch:
